[gd_scene load_steps=6 format=2]

[ext_resource path="res://Source/UI/LvlUp/LvlUp.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/UI/upgrade.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/retro-gaming.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="LvlUp" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Button1" type="TextureButton" parent="HBoxContainer"]
margin_right = 338.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( -1091, 414 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="Title" type="RichTextLabel" parent="HBoxContainer/Button1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -10.0
margin_right = 80.0
margin_bottom = 10.0
mouse_filter = 2
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Title[/center]"
text = "Title"
fit_content_height = true

[node name="Description" type="RichTextLabel" parent="HBoxContainer/Button1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 188.0
mouse_filter = 2
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Description[/center]"
text = "Description"

[node name="Button2" type="TextureButton" parent="HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( -1091, 414 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="Title" type="RichTextLabel" parent="HBoxContainer/Button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -10.0
margin_right = 80.0
margin_bottom = 10.0
mouse_filter = 2
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Title[/center]"
text = "Title"
fit_content_height = true

[node name="Description" type="RichTextLabel" parent="HBoxContainer/Button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 188.0
mouse_filter = 2
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Description[/center]"
text = "Description"

[node name="Button3" type="TextureButton" parent="HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( -1091, 414 )
size_flags_horizontal = 3
texture_normal = ExtResource( 2 )
expand = true

[node name="Title" type="RichTextLabel" parent="HBoxContainer/Button3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -10.0
margin_right = 80.0
margin_bottom = 10.0
mouse_filter = 2
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Title[/center]"
text = "Title"
fit_content_height = true

[node name="Description" type="RichTextLabel" parent="HBoxContainer/Button3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 188.0
mouse_filter = 2
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Description[/center]"
text = "Description"

[connection signal="pressed" from="HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
